fix notes icon aligns in mdx

--- a/scopes/mdx/ui/mdx-layout/mdx-layout.css
+++ b/scopes/mdx/ui/mdx-layout/mdx-layout.css
@@ -18,7 +18,6 @@
 
 .admonition-icon {
   display: inline-flex;
-  align-self: center;
   margin-right: 4px;
 }
 
